--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.1.3",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "simple-peer": "^9.5.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
