--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.1.10",
     "@mui/styled-engine": "^6.1.10",
     "@mui/system": "^6.1.10",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,7 +38,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "react-hooks/exhaustive-deps": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -53,6 +58,7 @@
   },
   "devDependencies": {
     "@mui/icons-material": "^5.x.x",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "typescript": "^4.9.5"
   }
 }
