--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "5.0.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zego-express-engine-webrtc": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
